--- a/node-ejs/views/pages/index.ejs
+++ b/node-ejs/views/pages/index.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+    <%- include('head'); %>
     <body class="container">
-
+        <%- include('header'); %>
         <main>
             <div class="jumbotron">
                 <h1>Node com EJS</h1>
                 <p>Aprendendo a trabalhar com arquivos EJS</p>
             </div>
         </main>
-
+        <%- include('footer'); %>
     </body>
 </html>
