--- a/node-ejs/views/pages/about.ejs
+++ b/node-ejs/views/pages/about.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-    <%- include('head'); %>
+    <%- include('../partials/head'); %>
     <body class="container">
-        <%- include('header'); %>
+        <%- include('../partials/header', {pagina: 'Sobre'}) %>
         <main>
             <div class="jumbotron">
                 <h1>Sobre mim</h1>
                 <p>Olá, eu sou o Matheus! </p>
             </div>
         </main>
-        <%- include('footer'); %>
+        <%- include('../partials/footer'); %>
     </body>
 </html>
