--- a/node-ejs/views/pages/index.ejs
+++ b/node-ejs/views/pages/index.ejs
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-    <%- include('head'); %>
+    <%- include('../partials/head'); %>
     <body class="container">
-        <%- include('header'); %>
+        <%- include('../partials/header'); %>
         <main>
             <div class="jumbotron">
                 <h1>Node com EJS</h1>
                 <p>Aprendendo a trabalhar com arquivos EJS</p>
             </div>
+            <ul>
+                <% qualitys.forEach(function(quality){ %>
+                    <li>
+                        <strong><%= quality.title %></strong> <%= quality.message %>
+                    </li>
+                <% }) %> 
+            </ul>
+
         </main>
-        <%- include('footer'); %>
+        <%- include('../partials/footer'); %>
     </body>
 </html>
